ci: reuse workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,136 +8,40 @@ on:
     - main
 
 jobs:
-  pre-commit:
-    name: Format
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Lint setuptools
-      run: pipx run nox --forcecolor -s 'lint(setuptools)'
-
-    - name: Lint pybind11
-      run: pipx run nox --forcecolor -s 'lint(pybind11)'
-
-    - name: Lint poetry
-      run: pipx run nox --forcecolor -s 'lint(poetry)'
-
-    - name: Lint flit
-      run: pipx run nox --forcecolor -s 'lint(flit)'
-
-    - name: Lint flit621
-      run: pipx run nox --forcecolor -s 'lint(flit621)'
-
-    - name: Lint pdm
-      run: pipx run nox --forcecolor -s 'lint(pdm)'
-
-    - name: Lint trampolim
-      run: pipx run nox --forcecolor -s 'lint(trampolim)'
-
-    - name: Lint whey
-      run: pipx run nox --forcecolor -s 'lint(whey)'
-
-
-  checks:
-    name: Check Python ${{ matrix.python-version }} on ${{ matrix.runs-on }}
-    runs-on: ${{ matrix.runs-on }}
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.6", "3.10"]
-        runs-on: [ubuntu-latest, macos-latest, windows-latest]
-
-        include:
-        - python-version: pypy-3.7
-          runs-on: ubuntu-latest
-
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install nox
-      run: pip install nox
-
-    - name: Test setuptools
-      run: nox --forcecolor -s 'tests(setuptools)'
-
-    - name: Test pybind11
-      run: nox --forcecolor -s 'tests(pybind11)'
-
-    - name: Test poetry
-      run: nox --forcecolor -s 'tests(poetry)'
-
-    - name: Test flit
-      run: nox --forcecolor -s 'tests(flit)'
-
-    - name: Test flit621
-      run: nox --forcecolor -s 'tests(flit621)'
-
-    - name: Test pdm
-      run: nox --forcecolor -s 'tests(pdm)'
-
-    - name: Test trampolim
-      if: matrix.python-version != '3.6'
-      run: nox --forcecolor -s 'tests(trampolim)'
-
-    - name: Test whey
-      run: nox --forcecolor -s 'tests(whey)'
-
-    - name: Test poetry tooling
-      run: nox --forcecolor -s tests_poetry
-
-
-  nox:
-    name: Check included Noxfile
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Test setuptools
-      run: |
-        pipx run nox --forcecolor -s 'nox(setuptools)'
-        pipx run nox --forcecolor -s 'nox(setuptools)' -- docs
-
-    - name: Test pybind11
-      run: |
-        pipx run nox --forcecolor -s 'nox(pybind11)'
-        pipx run nox --forcecolor -s 'nox(pybind11)' -- docs
-
-    - name: Test poetry
-      run: |
-        pipx run nox --forcecolor -s 'nox(poetry)'
-        pipx run nox --forcecolor -s 'nox(poetry)' -- docs
-
-    - name: Test flit
-      run: |
-        pipx run nox --forcecolor -s 'nox(flit)'
-        pipx run nox --forcecolor -s 'nox(flit)' -- docs
-
-    - name: Test flit621
-      run: |
-        pipx run nox --forcecolor -s 'nox(flit621)'
-        pipx run nox --forcecolor -s 'nox(flit621)' -- docs
-
-    - name: Test pdm
-      run: |
-        pipx run nox --forcecolor -s 'nox(pdm)'
-        pipx run nox --forcecolor -s 'nox(pdm)' -- docs
-
-    - name: Test trampolim
-      run: |
-        pipx run nox --forcecolor -s 'nox(trampolim)'
-        pipx run nox --forcecolor -s 'nox(trampolim)' -- docs
-
-    - name: Test whey
-      run: |
-        pipx run nox --forcecolor -s 'nox(whey)'
-        pipx run nox --forcecolor -s 'nox(whey)' -- docs
+  setuptools:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: setuptools
+  pybind11:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: pybind11
+  poetry:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: poetry
+  flit:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: flit
+  flit621:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: flit621
+  pdm:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: pdm
+  trampolim:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: trampolim
+      python-min: "3.7"
+  whey:
+    uses: scikit-hep/cookie/.github/workflows/each.yml@main
+    with:
+      backend: whey
+  
 
 
   dist:
